頂点の調整完了

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-glslify": "^2.0.0",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.12.8",
+    "glsl-noise": "0.0.0",
     "glsl-strip-comments-loader": "^1.1.0",
     "glslify": "^6.1.0",
     "glslify-import-loader": "^0.1.2",
