--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"start": "gulp browserSync"
   },
   "author": "yoshihito fujiwara",
   "license": "ISC",
@@ -30,9 +31,5 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-stream": "^4.0.1"
-  },
-  "dependencies": {
-    "ink-javascript": "0.0.1",
-    "jquery": "*"
   }
 }
